--- a/src/app/modules/inicio/components/cards/cards.component.css
+++ b/src/app/modules/inicio/components/cards/cards.component.css
@@ -1,18 +1,35 @@
 .container{
-    display: flex;
+  
     padding: 10px;
     justify-content: center;
+    
 }
 h1{
-    text-align: center;
+    text-align:left;
 }
 .contenido{
     width: 200px;
     display: inline-block;
     padding: 15px;
     border-radius: 8px;
-    margin: 10px;
+    margin: 100px;
+    padding: 10px;
+   
 }
 p{
     padding: 5px;
+}
+img{
+    width: 250px;
+    height: 200px;
+    align-items: center;
+}
+.card{
+    width: 400px;
+    height: 400px;
+    align-content: center;
+    padding-left: 20px;
+}
+button{
+  text-align: center;
 }
