--- a/src/app/modules/inicio/components/cards/cards.component.html
+++ b/src/app/modules/inicio/components/cards/cards.component.html
@@ -3,26 +3,25 @@
       
         <div class="col">
                 <div *ngFor="let i of info" class="contenido">
-                    <mat-card class="example-card">
+                    <mat-card class="card">
                         <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
-                          <mat-card-title>{{i.nombre}}</mat-card-title>
-                          <mat-card-subtitle>{{i.edad}}</mat-card-subtitle>
+                          <mat-card-title>{{i.nombre}}</mat-card-title >
+                          <mat-card-subtitle>Tono:{{i.tono}}</mat-card-subtitle>
                           <mat-card-subtitle>{{i.alt}}</mat-card-subtitle>
                         </mat-card-header>
-                        <img mat-card-image src="{{i.imagen}}" alt="{{i.alt}}">
+                      
                         <mat-card-content>
-                          <p>
-                           
-                          </p>
+                          <img mat-card-image src="{{i.imagen}}">
+                          <p>Precio: ${{i.precio}}</p>
+
                         </mat-card-content>
                         <mat-card-actions>
-                          <button mat-button>Me gusta</button>
-                          <button mat-button>Guardar</button>
+                        
+                          <button mat-button>Agregar al carrito</button>
                         </mat-card-actions>
                       </mat-card>
-                      
                 </div>
-        </div>
+            
     </div>
 </div>
