--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,2 +1,7 @@
-<h1>Inicio</h1>
+<div class="container">
+    <h1 class="Bienvenidos">Bienvenido</h1>
+    
+    <h1>Nuestros mas vendidos</h1>
+</div>
+
  <app-cards></app-cards> 
