añadi carrusel,navbar,trabaje en las cards,en el ruteo del navbar, y ruteo de productos;labiales y rubores. No pude hacer uso los querys correctamente

--- a/src/app/modules/autentificacion/pages/registro/registro.component.html
+++ b/src/app/modules/autentificacion/pages/registro/registro.component.html
@@ -6,14 +6,14 @@
         <mat-form-field appearance="fill">
             <mat-label>Ingrese Nombre de Usuario</mat-label>
             <!-- ngmodel= directiva bidireccional utilizada para formularios, se lo agregamos a cada input-->
-            <input matInput placeholder="ej: pepe" required>
+            <input [(ngModel)]="usuarios.nombre" matInput placeholder="ej: pepe" required>
             <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
           
         </mat-form-field>
         <!-- Apellido -->
         <mat-form-field appearance="fill">
             <mat-label>Ingrese Apellido</mat-label>
-            <input matInput placeholder="ej:perez">
+            <input [(ngModel)]="usuarios.apellido" matInput placeholder="ej:perez">
             <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
             
         </mat-form-field>
@@ -21,7 +21,7 @@
         <!-- Email de usuario -->
         <mat-form-field appearance="fill">
             <mat-label>Igrese su email</mat-label>
-            <input matInput placeholder="ej:perezpepito@gmail.com" required>
+            <input [(ngModel)]="usuarios.email" matInput placeholder="ej:perezpepito@gmail.com" required>
             <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
             
         </mat-form-field>
@@ -38,7 +38,7 @@
         <!-- Contraseña -->
         <mat-form-field>
             <mat-label>Ingrese su contraseña</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'" #input minlength="6" required>
+            <input [(ngModel)]="usuarios.password" matInput [type]="hide ? 'password' : 'text'" #input minlength="6" required>
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
               <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
