--- a/src/app/modules/inicio/components/cards/cards.component.css
+++ b/src/app/modules/inicio/components/cards/cards.component.css
@@ -29,7 +29,9 @@ img{
     height: 400px;
     align-content: center;
     padding-left: 20px;
+    margin-left: 2rem;
 }
 button{
   text-align: center;
+
 }
