--- a/src/app/modules/inicio/pages/inicio/inicio.component.css
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.css
@@ -1,6 +1,18 @@
 .container{
     align-items: center;
+  margin-left: 2rem;
 }
 h1{
+    margin-top: 20px;
     text-align: center;
 }
+.carousel-item{
+    justify-content: center;
+
+}
+.img-carrusel{
+width: 1550px;
+
+}
+
+
