--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,7 +1,27 @@
+
+<div id="carouselExample" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="img-carrusel" src="./assets/imagenes/carousel3.jpg"  style="height: 600px;" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img  class="img-carrusel" src="./assets/imagenes/carousel2.jpg" style="height: 600px;" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img class="img-carrusel" src="./assets/imagenes/carousel2.png" style="height: 600px;"  alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 <div class="container">
-    <h1 class="Bienvenidos">Bienvenido</h1>
-    
-    <h1>Nuestros mas vendidos</h1>
+<h1>Nuestros mas vendidos</h1>
+<app-cards></app-cards> 
 </div>
 
- <app-cards></app-cards> 
