--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
    
     <div class="container-fluid">
-        <a class="navbar-brand" routerLink="/inicio">Navbar</a>
+        <a class="navbar-brand" routerLink="/inicio"><img src="./assets/imagenes/logo.jpg" id="img"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
