trabaje en las card de labiales y en las de rubores pero tuve errores

--- a/src/app/modules/inicio/components/cards/cards.component.css
+++ b/src/app/modules/inicio/components/cards/cards.component.css
@@ -30,8 +30,12 @@ img{
     align-content: center;
     padding-left: 20px;
     margin-left: 2rem;
+ 
 }
 button{
   text-align: center;
+  align-content: center;
+  font-size: medium;
+  
 
 }
