--- a/src/app/modules/inicio/components/cards/cards.component.html
+++ b/src/app/modules/inicio/components/cards/cards.component.html
@@ -18,7 +18,7 @@
                         </mat-card-content>
                         <mat-card-actions>
                         
-                          <button mat-button>Agregar al carrito</button>
+                          <button mat-button>Comprar</button>
                         </mat-card-actions>
                       </mat-card>
                 </div>
