Trabaje en la vinculacion con firebase, termine las importaciones que me faltaban en el app modules|Creacion de las pages; contorno, rubores,corrector,iluminador,bases,polvos, todas con sus respectivas rutas

--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -18,12 +18,12 @@
       
     </mat-menu>
     <mat-menu #Rostro>
-        <button mat-menu-item routerLink="/">Rubores</button>
-        <button mat-menu-item routerLink="/">Bases</button>
-        <button mat-menu-item routerLink="/">Corrector</button>
-        <button mat-menu-item routerLink="/">Polvo compacto</button>
-        <button mat-menu-item routerLink="/">Contorno</button>
-        <button mat-menu-item routerLink="/">Iluminador</button>
+        <button mat-menu-item routerLink="Rubores/">Rubores</button>
+        <button mat-menu-item routerLink="Bases/">Bases</button>
+        <button mat-menu-item routerLink="Corrector/">Correctores</button>
+        <button mat-menu-item routerLink="Polvos/">Polvos compactos</button>
+        <button mat-menu-item routerLink="Contorno/">Contorno</button>
+        <button mat-menu-item routerLink="Iluminador/">Iluminador</button>
     </mat-menu>
     <span class="example-spacer"></span>
   <!--Menu desplegable para manejar los accesos de la pagina-->
