--- a/src/app/modules/inicio/pages/inicio/inicio.component.css
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.css
@@ -1,9 +1,4 @@
-.container{
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
 
-}
 h1{
     margin-top: 20px;
     text-align: center;
@@ -26,4 +21,60 @@ height: 600px;
   }
 .contenedor{
     scale: 0,3;
+}
+
+.container {
+  padding: 10px;
+  justify-content: center;
+  background-color: rgb(199, 164, 170);
+  max-width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px; /* Espacio entre las tarjetas */
+  box-sizing: border-box;
+}
+
+h1 {
+  text-align: left;
+}
+
+.contenido {
+  width: 200px;
+  display: inline-block;
+  padding: 15px;
+  border-radius: 8px;
+  margin: 130px;
+  margin-left: 100px;
+  max-width: calc(100% - 20px);
+}
+
+p {
+  padding: 5px;
+}
+
+img {
+  width: 250px;
+  height: 200px;
+  align-items: center;
+}
+
+.card {
+  width: 400px;
+  height: 400px;
+  align-content: center;
+border-radius: 50px;
+
+  align-items: center;
+}
+
+button {
+  text-align: center;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+
+ 
+}
+#boton-de-card{
+  background-color: rgb(237, 163, 190);
 }
