--- a/src/app/modules/producto/pages/labiales/labiales.component.css
+++ b/src/app/modules/producto/pages/labiales/labiales.component.css
@@ -1,37 +1,53 @@
-.container{
-  
+.container {
     padding: 10px;
     justify-content: center;
-    
+    background-color:#ceace8;
+    max-width: 100vw;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px; /* Espacio entre las tarjetas */
+    box-sizing: border-box;
 }
-h1{
-    text-align:left;
+
+h1 {
+    text-align: left;
 }
-.contenido{
+
+.contenido {
     width: 200px;
     display: inline-block;
     padding: 15px;
     border-radius: 8px;
-    margin: 100px;
-    padding: 10px;
-   
+    margin: 130px;
+    margin-left: 100px;
+    max-width: calc(100% - 20px);
 }
-p{
+
+p {
     padding: 5px;
 }
-img{
+
+img {
     width: 250px;
     height: 200px;
     align-items: center;
 }
-.card{
+
+.card {
     width: 400px;
     height: 400px;
     align-content: center;
-    padding-left: 20px;
-    margin-left: 2rem;
+  border-radius: 50px;
+  
+    align-items: center;
 }
-button{
-  text-align: center;
 
+button {
+    text-align: center;
+    background-color: rgb(237, 163, 190);
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+  
+   
 }
