--- a/src/app/modules/producto/pages/polvos/polvos.component.html
+++ b/src/app/modules/producto/pages/polvos/polvos.component.html
@@ -1,1 +1,24 @@
-<p>polvos works!</p>
+<div class="container">
+  <div class="row">
+      <div class="col">
+          <div *ngFor="let i of info" class="contenido">
+              <mat-card class="card">
+                  <mat-card-header>
+                      <div mat-card-avatar class="example-header-image"></div>
+                      <mat-card-title>{{i.nombre}}</mat-card-title>
+                      <mat-card-subtitle>Tono: {{i.tono}}</mat-card-subtitle>
+                      <mat-card-subtitle>{{i.alt}}</mat-card-subtitle>
+                  </mat-card-header>
+
+                  <mat-card-content>
+                      <img mat-card-image src="{{i.imagen}}">
+                      <p>Precio: ${{i.precio}}</p>
+                  </mat-card-content>
+                  <mat-card-actions>
+                      <button mat-button>Comprar</button>
+                  </mat-card-actions>
+              </mat-card>
+          </div>
+      </div>
+  </div>
+</div>
