--- a/src/app/modules/shared/components/navbar/navbar.component.css
+++ b/src/app/modules/shared/components/navbar/navbar.component.css
@@ -27,3 +27,28 @@
     height: 80px;
     border-radius: 100px;
   }
+  img{
+    width: 140px;
+    height: 100px;
+ 
+border-radius: 80px;
+  }
+
+  mat-toolbar{
+    height: 100px;
+    display: flex;
+    justify-content: space-between; /* Alinea los elementos a los bordes */
+
+  
+
+  }
+  #botones{
+    position: absolute; /*pone el contenedor en una posición específica */
+    left: 50%; /* Mueve el contenedor al centro horizontalmente */
+    transform: translateX(-70%); /* Ajusta la posición para centrarlo */
+  }
+#loguearse{
+  position: absolute; 
+  right: 0%; 
+padding-right: 60px;
+}
