--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -7,42 +7,45 @@
       <button mat-menu-item [matMenuTriggerFor]="producto">Productos</button>
     </mat-menu>
 
-    <span>My App</span>
+    <span><img src="./assets/imagenes/logo.jpg"></span>
     <!-- Boton para la vista del inicio --> 
-     <button id="menuInicio" mat-button routerLink="/inicio">Inicio</button>
-    <!-- Menu desplegable ->Productos -->
-    <button id="menuProducto" mat-button [matMenuTriggerFor]="producto">Productos</button>
-    <mat-menu #producto="matMenu">
-        <button mat-menu-item routerLink="/labiales">Labiales</button>
-        <button mat-menu-item [matMenuTriggerFor]="Rostro">Rostro</button>
-      
-    </mat-menu>
-    <mat-menu #Rostro>
-        <button mat-menu-item routerLink="Rubores/">Rubores</button>
-        <button mat-menu-item routerLink="Bases/">Bases</button>
-        <button mat-menu-item routerLink="Corrector/">Correctores</button>
-        <button mat-menu-item routerLink="Polvos/">Polvos compactos</button>
-        <button mat-menu-item routerLink="Contorno/">Contorno</button>
-        <button mat-menu-item routerLink="Iluminador/">Iluminador</button>
-    </mat-menu>
-    <span class="example-spacer"></span>
+     <div id="botones">
+      <button id="menuInicio" mat-button routerLink="/inicio">Inicio</button>
+      <!-- Menu desplegable ->Productos -->
+      <button id="menuProducto" mat-button [matMenuTriggerFor]="producto">Productos</button>
+      <mat-menu #producto="matMenu">
+          <button mat-menu-item routerLink="/Labiales">Labiales</button>
+          <button mat-menu-item [matMenuTriggerFor]="Rostro">Rostro</button>
+        
+      </mat-menu>
+      <mat-menu #Rostro>
+          <button mat-menu-item routerLink="Rubores/">Rubores</button>
+          <button mat-menu-item routerLink="Bases/">Bases</button>
+          <button mat-menu-item routerLink="Corrector/">Correctores</button>
+          <button mat-menu-item routerLink="Polvos/">Polvos compactos</button>
+          <button mat-menu-item routerLink="Contorno/">Contorno</button>
+          <button mat-menu-item routerLink="Iluminador/">Iluminador</button>
+      </mat-menu>
+     </div>
+  
+    
   <!--Menu desplegable para manejar los accesos de la pagina-->
+  
+<div id="loguearse">
+  <button mat-button [matMenuTriggerFor]="usuario" ><mat-icon  id="icon">person</mat-icon></button>
+  <mat-menu #usuario="matMenu">
+      <button mat-menu-item (click)="ingresar()" *ngIf="logueado"  routerLink="/registro">Registrarse</button>
+      <button mat-menu-item (click)="ingresar()" *ngIf="logueado"  routerLink="/inicio-sesion">Iniciar Sesion</button>
+      <button mat-menu-item (click)="cerrarSesion()" *ngIf="deslogueado" >Cerrar Sesion</button>
 
-    <button mat-button [matMenuTriggerFor]="usuario" ><mat-icon>person</mat-icon></button>
-    <mat-menu #usuario="matMenu">
-        <button mat-menu-item (click)="ingresar()" *ngIf="logueado"  routerLink="/registro">Registrarse</button>
-        <button mat-menu-item (click)="ingresar()" *ngIf="logueado"  routerLink="/inicio-sesion">Iniciar Sesion</button>
-        <button mat-menu-item (click)="cerrarSesion()" *ngIf="deslogueado" >Cerrar Sesion</button>
+  </mat-menu>
+</div>
+ 
+ 
 
-    </mat-menu>
-
-   <!-- carrito -->
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>shopping_cart</mat-icon>
-    </button>
-
-     <!--Label para modo oscuro-->
+   <!--Label para modo oscuro-->
+   
   <label for="toggle" id="label_toggle"><i class="fa-solid fa-moon"></i></label>
 
   <input type="checkbox" id="toggle" (click)="cambiarFondo()">
-  </mat-toolbar>
+</mat-toolbar>
