--- a/src/app/modules/producto/pages/bases/bases.component.css
+++ b/src/app/modules/producto/pages/bases/bases.component.css
@@ -38,7 +38,7 @@ img {
     height: 400px;
     align-content: center;
   border-radius: 50px;
-  
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     align-items: center;
 }
 
@@ -51,3 +51,4 @@ button {
   
    
 }
+
