--- a/src/app/modules/autentificacion/pages/iniciosesion/iniciosesion.component.css
+++ b/src/app/modules/autentificacion/pages/iniciosesion/iniciosesion.component.css
@@ -1,11 +1,29 @@
 .container{
-    display: flex;
+display: grid;
     padding: 10px;
+    margin-top: 20px;
     text-align: center;
     justify-content: center;
+   
+    border-bottom: 2px solid  rgb(214, 188, 198);;
+    border-top: 2px solid  rgb(214, 188, 198);;
+    border-left: 2px solid  rgb(214, 188, 198);;
+    border-right: 2px solid  rgb(214, 188, 198);;
+
+    
 }
 
 .boton{
-    width: 120px;
+    width: 150px;
+    height: 50px;
+    border-radius: 50px;
     margin: auto;
+    background-color: rgb(214, 188, 198);
+
+}
+mat-form-field{
+    width: 50%;
+
+   
+
 }
