--- a/src/app/modules/autentificacion/pages/registro/registro.component.css
+++ b/src/app/modules/autentificacion/pages/registro/registro.component.css
@@ -1,10 +1,25 @@
 .container{
-    display: flex;
     padding: 10px;
+    margin-top: 20px;
     text-align: center;
     justify-content: center;
+
+    border-bottom: 2px solid  rgb(214, 188, 198);;
+    border-top: 2px solid  rgb(214, 188, 198);;
+    border-left: 2px solid  rgb(214, 188, 198);;
+    border-right: 2px solid  rgb(214, 188, 198);;
 }
 .boton{
-    width: 120px;
     margin: auto;
+    background-color:  rgb(214, 188, 198);
+    width: 150px;
+    height: 50px;
+    border-radius: 50px;
+  
+}
+/*Necesito que todos los mat form field queden uno abajo del otro y mas chicos */
+
+mat-form-field{
+width: 500px;
+
 }
