--- a/src/app/modules/inicio/pages/inicio/inicio.component.css
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.css
@@ -26,7 +26,7 @@ height: 600px;
 .container {
   padding: 10px;
   justify-content: center;
-  background-color: rgb(199, 164, 170);
+  background-color:rgb(248, 234, 239);
   max-width: 100vw;
   display: flex;
   flex-wrap: wrap;
@@ -35,7 +35,7 @@ height: 600px;
 }
 
 h1 {
-  text-align: left;
+  text-align: center;
 }
 
 .contenido {
@@ -44,25 +44,27 @@ h1 {
   padding: 15px;
   border-radius: 8px;
   margin: 130px;
-  margin-left: 100px;
-  max-width: calc(100% - 20px);
+  margin-left: 70px;
+
+
 }
 
 p {
-  padding: 5px;
+text-align: center;
+
 }
 
 img {
-  width: 250px;
-  height: 200px;
+  width: 170px;
+  height: 150px;
   align-items: center;
 }
 
 .card {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 350px;
   align-content: center;
-border-radius: 50px;
+  border-radius: 50px;
 
   align-items: center;
 }
@@ -76,5 +78,5 @@ button {
  
 }
 #boton-de-card{
-  background-color: rgb(237, 163, 190);
+  background-color: rgb(214, 188, 198);
 }
