--- a/src/app/modules/producto/pages/labiales/labiales.component.css
+++ b/src/app/modules/producto/pages/labiales/labiales.component.css
@@ -1,7 +1,7 @@
 .container {
     padding: 10px;
     justify-content: center;
-    background-color:#ceace8;
+    background-color:  rgb(248, 234, 239);
     max-width: 100vw;
     display: flex;
     flex-wrap: wrap;
@@ -19,8 +19,8 @@ h1 {
     padding: 15px;
     border-radius: 8px;
     margin: 130px;
-    margin-left: 100px;
-    max-width: calc(100% - 20px);
+    margin-left: 80px;
+
 }
 
 p {
