--- a/src/app/modules/shared/components/navbar/navbar.component.css
+++ b/src/app/modules/shared/components/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 @media(min-width: 300px) and (max-width:700px) {
    #navbar{
-      background-color: rgb(224, 148, 213);
+      background-color: rgb(182, 147, 177);
     }
     #menuSecciones {
         display: none;
@@ -13,7 +13,7 @@
 
 @media(min-width:700px) {
     mat-toolbar {
-      background-color: rgb(243, 235, 234);
+      background-color: rgb(231, 214, 221);
     }
   
     #menuSecciones {
@@ -22,16 +22,11 @@
   
   }
 
-  #img{
-    width: 80px;
-    height: 80px;
-    border-radius: 100px;
-  }
+
   img{
-    width: 140px;
-    height: 100px;
- 
-border-radius: 80px;
+    width: 120px;
+    height: 80px;
+    border-radius: 80px;
   }
 
   mat-toolbar{
@@ -51,4 +46,7 @@ border-radius: 80px;
   position: absolute; 
   right: 0%; 
 padding-right: 60px;
+}
+button{
+  background-color: rgb(231, 214, 221);
 }
