Realice cambios en el navbar, y en el inicio; cambie el diseo de las cards de inicio, cambie los colores del fondo, tambien el diseño de los botones, tambien cambie el diseño del navbar, su tamaño, las posiciones de los botones y los colores del fondo, hice uso de la etiqueta video para poder poner un video que se reproduzca solo

--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<div class="container">
+    <div class="row">
+        <div class="medios_de_pago">
+            <p>Medios de pago:</p>
+            <img src="../../../../../assets/imagenes/mercado-pago.jfif" alt="">
+            <img src="../../../../../assets/imagenes/mastercard.jfif" alt="">
+            <img src="../../../../../assets/imagenes/tarjetanaranja.svg" alt="">
+        </div>
+    </div>
+</div>
