--- a/src/app/modules/inicio/pages/inicio/inicio.component.css
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.css
@@ -26,7 +26,7 @@ height: 600px;
 .container {
   padding: 10px;
   justify-content: center;
-  background-color:rgb(248, 234, 239);
+  background-color:rgb(250, 238, 250);
   max-width: 100vw;
   display: flex;
   flex-wrap: wrap;
@@ -36,6 +36,8 @@ height: 600px;
 
 h1 {
   text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 
 .contenido {
@@ -45,13 +47,12 @@ h1 {
   border-radius: 8px;
   margin: 130px;
   margin-left: 70px;
-
-
 }
 
 p {
 text-align: center;
-
+font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-size: 20px;
 }
 
 img {
@@ -64,8 +65,6 @@ img {
   width: 300px;
   height: 350px;
   align-content: center;
-  border-radius: 50px;
-
   align-items: center;
 }
 
@@ -79,4 +78,9 @@ button {
 }
 #boton-de-card{
   background-color: rgb(214, 188, 198);
+}
+video{
+  width: 1000px;
+  height: 650px;
+  position:relative;
 }
