--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,37 +1,18 @@
-<!--<div class="contenedor">
-  <div id="carouselExample" class="carousel slide">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="img-carrusel" src="./assets/imagenes/carousel1.jpg"  salt="...">
-      </div>
-      <div class="carousel-item">
-        <img  class="img-carrusel" src="./assets/imagenes/carousel2.png" alt="...">
-      </div>
-     
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</div>--> 
+
+
 
 <div class="container">
   <div class="row">
       <div class="col">
         
         <h1>Productos Destacados</h1>
-        <p>¡Descubre los favoritos que Divinas tiene para ti!</p>
+    
         <div *ngFor="let i of info" class="contenido">
           <mat-card class="card">
               <mat-card-header>
 
                   <mat-card-title>{{i.nombre}}</mat-card-title>
-                  <mat-card-subtitle>{{i.tono}}</mat-card-subtitle>
+                  <mat-card-subtitle>Tono: {{i.tono}}</mat-card-subtitle>
                   <mat-card-subtitle>{{i.alt}}</mat-card-subtitle>
               </mat-card-header>
         
@@ -43,10 +24,20 @@
                   <button id="boton-de-card" mat-button>Comprar</button>
               </mat-card-actions>
           </mat-card>
+     
         </div>
+        <p>¡Descubre los favoritos que Divinas tiene para ti!</p>
       </div>
+
+
+      <video autoplay muted >
+        <source src="../../../../../assets/imagenes/video.mp4" type="video/mp4">
+
+      </video>
   </div>
 </div>
+
+
 
 
 
