--- a/src/app/modules/shared/components/navbar/navbar.component.css
+++ b/src/app/modules/shared/components/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 @media(min-width: 300px) and (max-width:700px) {
    #navbar{
-      background-color: rgb(182, 147, 177);
+      background-color: rgb(248, 245, 248);
     }
     #menuSecciones {
         display: none;
@@ -13,7 +13,7 @@
 
 @media(min-width:700px) {
     mat-toolbar {
-      background-color: rgb(231, 214, 221);
+      background-color:rgb(240, 208, 232);
     }
   
     #menuSecciones {
@@ -24,9 +24,10 @@
 
 
   img{
-    width: 120px;
-    height: 80px;
+    width: 130px;
+    height: 90px;
     border-radius: 80px;
+  
   }
 
   mat-toolbar{
@@ -39,14 +40,23 @@
   }
   #botones{
     position: absolute; /*pone el contenedor en una posición específica */
-    left: 50%; /* Mueve el contenedor al centro horizontalmente */
+    left: 50%; 
+    height: 15%;
     transform: translateX(-70%); /* Ajusta la posición para centrarlo */
+    padding: 15px
   }
 #loguearse{
   position: absolute; 
-  right: 0%; 
-padding-right: 60px;
+  left: 70%;
+  padding-right: 60px;
+  height: 15%;
 }
 button{
-  background-color: rgb(231, 214, 221);
+  background-color:rgb(250, 238, 250);
+  border-radius: 15px;
+}
+#filtro_de_busqueda{
+
+align-items: end;
+display: flex;
 }
