Realice cambios en el inicio, agregue un carrusel con dos imagenes, rutee las secciones de perfumeria, contacto, sobre nosotros y ofertas, a cada una la agrege un container, un row y un col,y cambie el video que habia elegido por otro, cree el component perfumeria

--- a/src/app/modules/contacto/contacto.component.html
+++ b/src/app/modules/contacto/contacto.component.html
@@ -1,1 +1,16 @@
-<p>contacto works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+                <div class="parrafo">
+                    <p>Mail: divinasmakeupgmail.com </p>
+                    <p>Telefono: 287642343</p>
+                    <p>Direccion: Bolivia1160</p>
+                </div>
+                <div class="Mensajes">
+                    <p>¡Comentanos tu experiencia!</p>
+                    <input type="text">
+                    <button>Aceptar</button>
+                </div>
+        </div>
+    </div>
+</div>
