--- a/src/app/modules/ofertas/ofertas.component.html
+++ b/src/app/modules/ofertas/ofertas.component.html
@@ -1,1 +1,9 @@
-<p>ofertas works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+                <p> Bienvenido a nuestra seccion de Ofertas!</p>
+                <p>En esta seccion te encontraras con productos en rebajas por cambio de temporada y tambien por errores de fabrica</p>
+                
+        </div>
+    </div>
+</div>
