--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
       <button id="menuProducto" mat-button [matMenuTriggerFor]="producto">Productos</button>
       <mat-menu #producto="matMenu">
           <button mat-menu-item routerLink="/Labiales">Labiales</button>
-          <button id="menuInicio" mat-button routerLink="/">Perfumeria</button>
+          <button mat-menu-item routerLink="/Perfumeria">Perfumeria</button>
           <button mat-menu-item [matMenuTriggerFor]="Rostro">Rostro</button>
         
       </mat-menu>
@@ -29,8 +29,9 @@
           <button mat-menu-item routerLink="Iluminador/">Iluminador</button>
       </mat-menu>
       
-      <button id="menuInicio" mat-button routerLink="/">Contacto</button>
-      <button id="menuInicio" mat-button routerLink="/">Sobre Nosotros</button>
+      <button id="menuInicio" mat-button routerLink="/Contacto">Contacto</button>
+      <button id="menuInicio" mat-button routerLink="/Sobrenosotros">Sobre Nosotros</button>
+      <button id="menuInicio" mat-button routerLink="/Ofertas">Ofertas</button>
 
      </div>
    
