--- a/src/app/modules/sobrenosotros/sobrenosotros.component.html
+++ b/src/app/modules/sobrenosotros/sobrenosotros.component.html
@@ -1,1 +1,8 @@
-<p>sobrenosotros works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <p>Como comenzo todo</p>
+                
+        </div>
+    </div>
+</div>
