Realice cambios en el navbar, puse un menu desplegable, tambien cambie el css de contacto, intente hacer funcionar el filtro de busqueda pero no funciono

--- a/src/app/modules/contacto/contacto.component.html
+++ b/src/app/modules/contacto/contacto.component.html
@@ -8,8 +8,9 @@
                 </div>
                 <div class="Mensajes">
                     <p>¡Comentanos tu experiencia!</p>
-                    <input type="text">
-                    <button>Aceptar</button>
+                    <input  matInput type="text">
+                    <br><br>
+                    <button class="boton" mat-raised-button color="primary" >Aceptar</button>
                 </div>
         </div>
     </div>
