--- a/src/app/modules/inicio/pages/inicio/inicio.component.css
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.css
@@ -9,7 +9,7 @@ h1{
 .container {
   padding: 10px;
   justify-content: center;
-  background-color:rgb(250, 238, 250);
+  background-color:rgb(253, 249, 253);
   max-width: 100vw;
   display: flex;
   flex-wrap: wrap;
@@ -76,13 +76,19 @@ video{
 
 }
 .d-block{
-width: 50px;
-height: 500px;
+width: 20px;
+height: 600px;
 
 
 }
 #carouselExampleRide{
-  padding:150px;
+  padding:120px;
   align-items: center;
+  width: 1350px;
+  height: 600px;
   
+}
+#imagenInicio{
+  width: 450px;
+  height: 500px;
 }
