Realice cambios en la seccion de perfumeria, ofertas y cree una nueva seccion llamada Sombras, configure el css de el navbar y del inicio

--- a/src/app/modules/inicio/pages/inicio/inicio.component.css
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.css
@@ -82,13 +82,19 @@ height: 600px;
 
 }
 #carouselExampleRide{
-  padding:120px;
+  /* padding:120px; */
   align-items: center;
-  width: 1350px;
+  /* width: 1350px; */
   height: 600px;
+
+  width: 100%;
   
 }
 #imagenInicio{
   width: 450px;
   height: 500px;
+}
+
+#img-carrusel{
+  object-fit: none;
 }
