--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,30 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="container">
   <div class="row">
       <div class="col">
@@ -32,7 +5,7 @@
         <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../../../../../assets/imagenes/imgInicio.png" class="d-block w-100" alt="...">
+              <img id="img-carrusel" src="../../../../../assets/imagenes/imgInicio.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
               <img src="../../../../../assets/imagenes/descuento.jpg" class="d-block w-100" alt="...">
