--- a/src/app/modules/producto/pages/perfumeria/perfumeria.component.html
+++ b/src/app/modules/producto/pages/perfumeria/perfumeria.component.html
@@ -1,1 +1,26 @@
-<p>perfumeria works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>Perfumeria</h1>
+            <div *ngFor="let i of info" class="contenido">
+                <mat-card class="card">
+                    <mat-card-header>
+                        <div mat-card-avatar class="example-header-image"></div>
+                        <mat-card-title>{{i.nombre}}</mat-card-title>
+                        <mat-card-subtitle></mat-card-subtitle>
+                        <mat-card-subtitle>{{i.alt}}</mat-card-subtitle>
+                    </mat-card-header>
+  
+                    <mat-card-content>
+                        <img mat-card-image src="{{i.imagen}}">
+                        <p>Precio: ${{i.precio}}</p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <button mat-button>Comprar</button>
+                    </mat-card-actions>
+                </mat-card>
+            </div>
+        </div>
+    </div>
+  </div>
+  
