--- a/src/app/modules/producto/pages/sombras/sombras.component.html
+++ b/src/app/modules/producto/pages/sombras/sombras.component.html
@@ -1,12 +1,7 @@
 
 <div class="container">
-            <p id="titulo"> Bienvenido a nuestra seccion de Ofertas!</p>
-        
     <div class="row">
         <div class="col">
-            
-
-
             <div *ngFor="let i of info" class="contenido">
                 <mat-card class="card">
                     <mat-card-header>
@@ -15,12 +10,10 @@
                         <mat-card-subtitle></mat-card-subtitle>
                         <mat-card-subtitle>{{i.alt}}</mat-card-subtitle>
                     </mat-card-header>
-
+  
                     <mat-card-content>
                         <img mat-card-image src="{{i.imagen}}">
-                      
-                        <p><s>${{i.precio}}</s></p>
-                        <p>${{i.precio2}}</p>
+                        <p>Precio: ${{i.precio}}</p>
                     </mat-card-content>
                     <mat-card-actions>
                         <button mat-button>Comprar</button>
@@ -29,4 +22,5 @@
             </div>
         </div>
     </div>
-</div>
+  </div>
+  
