--- a/src/app/modules/inicio/pages/inicio/inicio.component.css
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.css
@@ -27,14 +27,13 @@ h1 {
   width: 200px;
   display: inline-block;
   padding: 15px;
-  border-radius: 8px;
-  margin: 130px;
+  margin: 150px;
   margin-left: 70px;
+
 }
 
 p {
 text-align: center;
-font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 font-size: 20px;
 }
 
@@ -45,11 +44,12 @@ img {
 }
 
 .card {
-  width: 300px;
+  width: 350px;
   height: 350px;
   align-content: center;
   align-items: center;
-  
+  display: flex;
+  border-radius: 70px;
 }
 
 button {
@@ -63,11 +63,7 @@ button {
 #boton-de-card{
   background-color: rgb(214, 188, 198);
 }
-video{
-  width: 1000px;
-  height: 650px;
-  position:relative;
-}
+
 
 .col{
  
