--- a/src/app/modules/shared/components/navbar/navbar.component.css
+++ b/src/app/modules/shared/components/navbar/navbar.component.css
@@ -1,65 +1,77 @@
-@media(min-width: 300px) and (max-width:700px) {
-   #navbar{
-      background-color: rgb(248, 245, 248);
-    }
-    #menuSecciones {
-        display: none;
-      }
-      #Inicio {
-        display: none
-      }
-    
+@media (min-width: 300px) and (max-width: 700px) {
+  #navbar {
+    background-color: rgb(248, 245, 248);
+  }
+  #menuSecciones {
+    display: none;
+  }
+  #Inicio {
+    display: none;
+  }
 }
 
-@media(min-width:700px) {
-    mat-toolbar {
-      background-color:rgb(240, 208, 232);
-    }
-  
-    #menuSecciones {
-      display: none;
-    }
-  
+@media (min-width: 700px) {
+  mat-toolbar {
+    background-color: rgb(233, 195, 223);
   }
-
-
-  img{
-    width: 70px;
-    height: 70px;
-    border-radius: 100px;
-  
+  #botones {
+    display: none;
   }
-
-  mat-toolbar{
-    height: 100px;
-    display: flex;
-    justify-content: space-between; /* Alinea los elementos a los bordes */
-
-  
-
-  }
-  #botones{
-    position: absolute; /*pone el contenedor en una posición específica */
-    left: 50%; 
-    height: 15%;
-    transform: translateX(-70%); /* Ajusta la posición para centrarlo */
-    padding: 15px
-  }
-#loguearse{
-  position: absolute; 
-  left: 70%;
-  padding-right: 60px;
-  height: 15%;
 }
-button{
-  background-color:rgb(250, 238, 250);
+
+.navbar {
+  height: 90px;
+
+  justify-content: space-between; /* Alinea los elementos a los bordes */
+  align-items: center; /* Centra verticalmente */
+}
+
+.menu {
+  color: black;
+  padding: 10px;
+  margin-right: auto; /* Mueve el menú a la izquierda */
+}
+
+.logo {
+  width: 70px;
+  height: 70px;
+  border-radius: 100px;
+  margin: 0 350px; /* Ajusta el margen según sea necesario */
+  cursor: pointer;
+  margin-left: 0;
+  
+}
+
+
+
+#loguearse {
+  margin-left: auto; /* Mueve el botón de loguearse a la derecha */
+}
+
+button {
+  background-color: rgb(250, 238, 250);
   border-radius: 15px;
 }
-#filtro_de_busqueda{
 
-align-items: end;
-display: flex;
-}
-ul, li{
+ul, li {
   list-style: none;
+}
+
+/*Animacion de letras*/
+p {
+  animation-duration: 20s;
+  animation-name: slidein;
+font-size: 20px;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
